--- a/packages/crayons-core/src/components/datepicker/datepicker.scss
+++ b/packages/crayons-core/src/components/datepicker/datepicker.scss
@@ -34,6 +34,7 @@
 }
 
 .mdpc-head {
+  --select-margin-bottom: 16px;
   display: flex;
   align-items: center;
 }
@@ -87,6 +88,7 @@
   box-sizing: border-box;
   position: relative;
   bottom: 6px;
+  right: 14px;
 }
 
 .mdpchb-inner:hover,
@@ -96,21 +98,14 @@
 }
 
 .mdpchb-inner {
-  float: left;
   height: 20px;
   width: 20px;
-  border-radius: 100%;
-  line-height: 35px;
-  text-align: center;
   position: absolute;
-  top: 45%;
-  left: 50%;
-  margin-left: -17px;
   margin-top: -11px;
 }
 
 .mdpch-button-right .mdpchb-inner {
-  left: 75%;
+  left: 12px;
 }
 
 .mdpchbi-left-arrow,
@@ -122,8 +117,8 @@
   display: block;
   width: 6px;
   height: 6px;
-  border-left: 2px solid $color-smoke-300;
-  border-bottom: 2px solid $color-smoke-300;
+  border-left: 2px solid $app-primary-black;
+  border-bottom: 2px solid $app-primary-black;
   position: absolute;
 }
 
@@ -169,6 +164,7 @@
 }
 
 .mdpchc-year {
+  --btn-min-width: 74px;
   float: left;
   height: 30px;
   font-size: 16px;
@@ -180,11 +176,11 @@
 }
 
 .mdpchc-month {
+  --btn-min-width: 65px;
   float: left;
   font-size: 16px;
   color: $color-smoke-700;
   text-align: center;
-  margin-right: 16px;
   width: 65px;
   --popover-max-height: 146px;
   --popover-min-width: 170px;
